leave-form-v2-api/api-v2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v2-svc
  namespace: leave-form-v2-ns
  labels:
    app: api-v2
spec:
  type: ClusterIP
  selector:
    app: api-v2
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
